css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: #000;
}

.topic {
  margin: 0;
  text-align: center;
  color: #ff6263;
  margin-bottom: 0.7em;
}

.input__container {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  justify-content: center;
  align-items: center;
  border: 0.5px solid #ff6263;
  width: 20rem;
  height: auto;
  padding: 1em;
  border-radius: 6px;
}

#submit-btn {
  border-radius: 6px;
  padding: 0.75em 1em;
  color: #fff;
  background-color: #ff6263;
  cursor: pointer;
  width: 100%;
  border: none;
  outline: none;
}

#submit-btn:disabled {
  cursor: not-allowed;
  opacity: 0.5;

}

input {
  width: 100%;
  padding: 0.5em;
  border: 0.5px solid #ff6263;
  outline: none;
  margin: 0.5em;
  color: #fff;
  border-radius: 4px;
}

#container {
  padding: 2.5em;
}

p {
  color: #fff;
  text-align: right;
}

.up-down {
  color: #fff;
  background: #ff6263;
  border: none;
  outline: none;
  padding: 0.5em;
  cursor: pointer;
  border-radius: 4px;
  margin: 0.2em;
}
.floor {
  width: 100%;
  display: flex;
  height: 30vh;
  flex-direction: column;
  justify-content: space-between;
  border: 1px solid #ff6263;
}

.lift-div {
  width: 150px;
  height: 150px;
  margin-left: 1em;
  border: 0.5px solid red;
  z-index: 1;
  background-color: white;
  display: flex;
  overflow: hidden;
}

.lift {
  display: flex;
  margin-left: 6em;
}

.left-door {
  background: #ff6263;
  width: 50%;
  height: 100%;
  border-right: 0.5px solid #fff;
  transition: transform 2.5s linear;
  z-index: 2;
}

.right-door {
  background: #ff6263;
  border-left: 0.5px solid #fff;
  width: 50%;
  height: 100%;
  transition: transform 2.5s linear;
  z-index: 2;
}

@media (max-width: 400px) {
  .input__container {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    justify-content: center;
    align-items: center;
    border: 0.5px solid #ff6263;
    width: 15rem;
    height: auto;
    padding: 0.75em;
  }
}

